--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,10 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.acme</groupId>
-  <artifactId>fwf</artifactId>
+  <groupId>com.martijndashorst</groupId>
+  <artifactId>fun-with-flags</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <name>Fun with Flags</name>
   <properties>
     <compiler-plugin.version>3.11.0</compiler-plugin.version>
     <maven.compiler.release>17</maven.compiler.release>
