feat: enable native image building and running

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.native.resources.includes=countries.json
 funwithflags.turns=8
 funwithflags.players=2
 funwithflags.numberOfSecondsPerTurn=10
